package pt.isep.enorm.ref.domain;

/*Generated by MPS */

import jakarta.persistence.Entity;
import jakarta.persistence.Table;
import pt.isep.enorm.ref.domain.generated.GeneratedSubreddit;

@Entity(name = "Subreddit")
@Table(name = "subreddits")
public class Subreddit extends GeneratedSubreddit {
}
